update page info

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -17,13 +17,29 @@
 
 <main>
     <p>Welcome to <b>Shanu Surf Lanka</b>&nbsp;&ndash; chill and relax place. Here you can meet friends from all over
-        the world, rest with us or organize some tours or surf lessons.</p>
+        the world. <i>Come</i> to us to <i>rest</i> with us :)
+    </p>
+    <p>Also we can organize tours and surf lessons.</p>
+
+    <!-- This is only for development-->
+    <h2>Contents:</h2>
+    <ol>
+        <li>Story or some welcome word</li>
+        <li>Images, gallery of photos</li>
+        <li>Location with photo and numbers</li>
+        <li>Some short info about accomodations and options</li>
+        <li>Prices?</li>
+        <li>Detailed contacts or feedback (booking, write email, smthng...)</li>
+    </ol>
+    <!-- This is only for development-->
+
+
     <h3>We provide:</h3>
     <ul>
-        <li>Surf lessons</li>
-        <li>Single and Double sunbeds</li>
-        <li>Surf and Diving equipment</li>
-        <li>Tours and Yoga Classes</li>
+        <li>Surf lessons</li> <!--Should be and article with images. Or maybe page or smthng?-->
+        <li>Single and Double sunbeds</li> <!--Should be and article with images. Or maybe page or smthng?-->
+        <li>Surf and Diving equipment</li> <!--Should be and article with images. Or maybe page or smthng?-->
+        <li>Tours and Yoga Classes</li> <!--Should be and article with images. Or maybe page or smthng?-->
     </ul>
 
     <h3>Contacts:</h3>
