--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
 <main>
     <p>Welcome to <b>Shanu Surf Lanka</b>&nbsp;&ndash; chill and relax place. Here you can meet friends from all over
-        the world. <i>Come</i> to us to <i>rest</i> with us :)
+        the world.
     </p>
+
+    <p><i>Come</i> to us to <i>rest</i> with us :)</p>
+
     <p>Also we can organize tours and surf lessons.</p>
 
     <!-- This is only for development-->
