nav menu mobile version html add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
 <header>
+    <div class="nav-wrapper">
+        <input type="checkbox" id="check-menu">
+        <label for="check-menu"> Shanu Surf Lanka </label>
+        <div class="burger-line"></div>
+        <div class="burger-line"></div>
+        <div class="burger-line"></div>
+        <div class="burger-line"></div>
+        <nav>
+            <ul>
+                <li><a href="#">Surf lessons</a></li>
+                <li><a href="#">Single and Double sunbeds</a></li>
+                <li><a href="#">Surf and Diving equipment</a></li>
+                <li><a href="#">Tours and Yoga Classes</a></li>
+            </ul>
+        </nav>
+    </div>
     <picture>
         <source media="(max-width: 480px)" srcset="image/overview-480w.jpg">
         <source media="(max-width: 800px)" srcset="image/overview-800w.jpg">
