nav menu mobile version style test

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <header>
     <div class="nav-wrapper">
         <input type="checkbox" id="check-menu">
-        <label for="check-menu"> Shanu Surf Lanka </label>
+        <label class="nav-label" for="check-menu"> Shanu Surf Lanka </label>
         <div class="burger-line"></div>
         <div class="burger-line"></div>
         <div class="burger-line"></div>
         <div class="burger-line"></div>
         <nav>
-            <ul>
-                <li><a href="#">Surf lessons</a></li>
-                <li><a href="#">Single and Double sunbeds</a></li>
-                <li><a href="#">Surf and Diving equipment</a></li>
-                <li><a href="#">Tours and Yoga Classes</a></li>
+            <ul class="nav-list">
+                <li><a class="nav-link" href="#">Surf lessons</a></li>
+                <li><a class="nav-link" href="#">Single and Double sunbeds</a></li>
+                <li><a class="nav-link" href="#">Surf and Diving equipment</a></li>
+                <li><a class="nav-link" href="#">Tours and Yoga Classes</a></li>
             </ul>
         </nav>
     </div>
