--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="nav-wrapper">
         <input type="checkbox" id="check-menu">
         <label class="nav-label" for="check-menu"> Shanu Surf Lanka </label>
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
+        <div class="burger-line burger-line-first"></div>
+        <div class="burger-line burger-line-seconde"></div>
+        <div class="burger-line burger-line-thirth"></div>
+        <div class="burger-line burger-line-first-fourth"></div>
         <nav>
             <ul class="nav-list">
                 <li><a class="nav-link" href="#">Surf lessons</a></li>
