temporary solution animation berger and menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="burger-line burger-line-first"></div>
         <div class="burger-line burger-line-seconde"></div>
         <div class="burger-line burger-line-thirth"></div>
-        <div class="burger-line burger-line-first-fourth"></div>
+        <div class="burger-line burger-line-fourth"></div>
         
             <ul class="nav-list">
                 <li><a class="nav-link" href="#">Surf lessons</a></li>
