--- a/index.html
+++ b/index.html
@@ -8,29 +8,26 @@
 </head>
 <body>
 <header>
-    <div class="nav-wrapper">
+    <nav class="nav-main">
         <input type="checkbox" id="check-menu">
         <label class="nav-label" for="check-menu"> Shanu Surf Lanka </label>
         <div class="burger-line burger-line-first"></div>
         <div class="burger-line burger-line-seconde"></div>
         <div class="burger-line burger-line-thirth"></div>
         <div class="burger-line burger-line-fourth"></div>
-        
             <ul class="nav-list">
                 <li><a class="nav-link" href="#">Surf lessons</a></li>
                 <li><a class="nav-link" href="#">Single and Double sunbeds</a></li>
                 <li><a class="nav-link" href="#">Surf and Diving equipment</a></li>
                 <li><a class="nav-link" href="#">Tours and Yoga Classes</a></li>
             </ul>
-        
-    </div>
+    <nav>
     <picture>
         <source media="(max-width: 480px)" srcset="image/overview-480w.jpg">
         <source media="(max-width: 800px)" srcset="image/overview-800w.jpg">
         <img src="image/overview-1280w.jpg" alt="Shanu Surf School Location Overview">
     </picture>
 </header>
-
 <main>
     <p>Welcome to <b>Shanu Surf Lanka</b>&nbsp;&ndash; chill and relax place. Here you can meet friends from all over
         the world.
