add filter header img and about block style test

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a class="nav-link" href="#">Surf and Diving equipment</a></li>
                 <li><a class="nav-link" href="#">Tours and Yoga Classes</a></li>
             </ul>
-    <nav>
+    </nav>
     <picture>
         <source media="(max-width: 480px)" srcset="image/overview-480w.jpg">
         <source media="(max-width: 800px)" srcset="image/overview-800w.jpg">
@@ -29,9 +29,18 @@
     </picture>
 </header>
 <main>
-    <p>Welcome to <b>Shanu Surf Lanka</b>&nbsp;&ndash; chill and relax place. Here you can meet friends from all over
-        the world.
-    </p>
+    <ul class="about">
+        <li>
+            <h2>serf lessons</h2>
+            <img src="image/about-image.jpg" alt="surf photo">
+            <p>Learn to surf with a 2 hour private surf lesson. Our spot is less crowded with gentler waves creating perfect conditions for beginners to have fun catching waves.
+            </p>
+            <a class="about__book-btn" href="#">book now</a>
+        </li>
+        <li>
+            <h2></h2>
+        </li>
+    </ul>
 
     <p><i>Come</i> to us to <i>rest</i> with us :)</p>
 
