welcome animation test

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="burger-line burger-line-seconde"></div>
         <div class="burger-line burger-line-thirth"></div>
         <div class="burger-line burger-line-fourth"></div>
-            <ul class="nav-list">
-                <li><a class="nav-link" href="#">Surf lessons</a></li>
-                <li><a class="nav-link" href="#">Single and Double sunbeds</a></li>
-                <li><a class="nav-link" href="#">Surf and Diving equipment</a></li>
-                <li><a class="nav-link" href="#">Tours and Yoga Classes</a></li>
-            </ul>
+        <ul class="nav-list">
+            <li><a class="nav-link" href="#">Surf lessons</a></li>
+            <li><a class="nav-link" href="#">Single and Double sunbeds</a></li>
+            <li><a class="nav-link" href="#">Surf and Diving equipment</a></li>
+            <li><a class="nav-link" href="#">Tours and Yoga Classes</a></li>
+        </ul>
     </nav>
     <picture>
         <source media="(max-width: 480px)" srcset="image/overview-480w.jpg">
@@ -29,11 +29,22 @@
     </picture>
 </header>
 <main>
+    <div class="welcome__wrapper">
+        <div class="welcome"></div>
+            <h1 class="welcome__title">
+            Surf Lessons Every Day. Year Round. All Ages.
+            </h1>
+            <h1 class="welcome__title">
+            Surf Lessons Every Day. Year Round. All Ages.
+            </h1>
+        </div>
+    </div>
     <ul class="about">
         <li>
             <h2>serf lessons</h2>
             <img src="image/about-image.jpg" alt="surf photo">
-            <p>Learn to surf with a 2 hour private surf lesson. Our spot is less crowded with gentler waves creating perfect conditions for beginners to have fun catching waves.
+            <p>Learn to surf with a 2 hour private surf lesson. Our spot is less crowded with gentler waves creating
+                perfect conditions for beginners to have fun catching waves.
             </p>
             <a class="about__book-btn" href="#">book now</a>
         </li>
