about add yoga equip and lessons

--- a/index.html
+++ b/index.html
@@ -29,19 +29,17 @@
     </picture>
 </header>
 <main>
-    <div class="welcome__wrapper">
-        <div class="welcome"></div>
-            <h1 class="welcome__title">
-            Surf Lessons Every Day. Year Round. All Ages.
+    <div class="welcome">
+            <h1 class="welcome__title">Surf Lessons Every Day.<br>
+                Year Round.<br>
+                All Ages.
             </h1>
-            <h1 class="welcome__title">
-            Surf Lessons Every Day. Year Round. All Ages.
-            </h1>
-        </div>
+        <p>From absolute beginners through to advanced level surfers, we offer surf lessons and courses for all abilities from age 5+.</p>
+        <p></p>
     </div>
     <ul class="about">
         <li>
-            <h2>serf lessons</h2>
+            <h2>surf lessons</h2>
             <img src="image/about-image.jpg" alt="surf photo">
             <p>Learn to surf with a 2 hour private surf lesson. Our spot is less crowded with gentler waves creating
                 perfect conditions for beginners to have fun catching waves.
@@ -49,8 +47,16 @@
             <a class="about__book-btn" href="#">book now</a>
         </li>
         <li>
-            <h2></h2>
+            <h2>equipments</h2>
+            <img src="image/-marc-roy-.jpg"  alt="surf equipments">
+            <p>The essential surfing equipment for beginners comprises a surfboard, fins, leash, wax, and wetsuit. That's all you need to get into the sport of kings.</p>
+            <a class="about__book-btn" href="#">equip now</a>
         </li>
+        <h2>yoga</h2>
+        <img src="image/-pixabay-.jpg" alt="relax photo">
+        <p>Everyone starts somewhere. Maybe you’re brand new to yoga or are looking for a way to ease back into your practice. These classes will develop your strength, flexibility, comfort level and stamina as you challenge your body and mind.</p>
+        <a class="about__book-btn" href="#">sing up</a>
+
     </ul>
 
     <p><i>Come</i> to us to <i>rest</i> with us :)</p>
