change z index nav list

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="about__book-btn" href="#">equip now</a>
         </li>
         <h2>yoga</h2>
-        <img src="image/-pixabay-.jpg" alt="relax photo">
+        <img src="image/-artem-beliaikin.jpg" alt="relax photo">
         <p>Everyone starts somewhere. Maybe you’re brand new to yoga or are looking for a way to ease back into your practice. These classes will develop your strength, flexibility, comfort level and stamina as you challenge your body and mind.</p>
         <a class="about__book-btn" href="#">sing up</a>
 
