about bookbtn test style

--- a/index.html
+++ b/index.html
@@ -44,46 +44,27 @@
             <p>Learn to surf with a 2 hour private surf lesson. Our spot is less crowded with gentler waves creating
                 perfect conditions for beginners to have fun catching waves.
             </p>
-            <a class="about__book-btn" href="#">book now</a>
+            <a class="btn about__book-btn" href="#"><span>book now</span></a>
         </li>
         <li>
             <h2>equipments</h2>
             <img src="image/-marc-roy-.jpg"  alt="surf equipments">
             <p>The essential surfing equipment for beginners comprises a surfboard, fins, leash, wax, and wetsuit. That's all you need to get into the sport of kings.</p>
-            <a class="about__book-btn" href="#">equip now</a>
+            <a class="btn about__book-btn" href="#">equip now</a>
         </li>
-        <h2>yoga</h2>
-        <img src="image/-artem-beliaikin.jpg" alt="relax photo">
-        <p>Everyone starts somewhere. Maybe you’re brand new to yoga or are looking for a way to ease back into your practice. These classes will develop your strength, flexibility, comfort level and stamina as you challenge your body and mind.</p>
-        <a class="about__book-btn" href="#">sing up</a>
-
+        <li>
+            <h2>yoga</h2>
+            <img src="image/-artem-beliaikin.jpg" alt="relax photo">
+            <p>Everyone starts somewhere. Maybe you’re brand new to yoga or are looking for a way to ease back into your practice. These classes will develop your strength, flexibility, comfort level and stamina as you challenge your body and mind.</p>
+            <a class="btn about__book-btn" href="#">sing up</a>
+        </li>
+        <li>
+            <h2>sunbeds reserve</h2>
+            <img src="image/-pixabay-.jpg">
+            <p>Reserving sunbeds and an umbrella in ShriLanka is now easier</p>
+            <a class="btn about__book-btn" href="#">reserve</a>
+        </li>
     </ul>
-
-    <p><i>Come</i> to us to <i>rest</i> with us :)</p>
-
-    <p>Also we can organize tours and surf lessons.</p>
-
-    <!-- This is only for development-->
-    <h2>Contents:</h2>
-    <ol>
-        <li>Story or some welcome word</li>
-        <li>Images, gallery of photos</li>
-        <li>Location with photo and numbers</li>
-        <li>Some short info about accomodations and options</li>
-        <li>Prices?</li>
-        <li>Detailed contacts or feedback (booking, write email, smthng...)</li>
-    </ol>
-    <!-- This is only for development-->
-
-
-    <h3>We provide:</h3>
-    <ul>
-        <li>Surf lessons</li> <!--Should be and article with images. Or maybe page or smthng?-->
-        <li>Single and Double sunbeds</li> <!--Should be and article with images. Or maybe page or smthng?-->
-        <li>Surf and Diving equipment</li> <!--Should be and article with images. Or maybe page or smthng?-->
-        <li>Tours and Yoga Classes</li> <!--Should be and article with images. Or maybe page or smthng?-->
-    </ul>
-
     <h3>Contacts:</h3>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
